--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -189,3 +189,14 @@ input {
   width: auto;
   margin-left: 0;
 }
+
+.users{
+  list-style: none;
+  margin: 0;
+  li{
+    //When the height of the dialog box is not enough, scroll automatically with: overflow: auto
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
