--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -7,11 +7,11 @@
       <%= render 'shared/error_messages' %>
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.label :password %>
-      <%= password_field :password, class: "form-control" %>
+      <%= f.label :password, "Password" %>
+      <%= f.password_field :password, class: "form-control" %>
       
-      <%= f.label :password_confirmation %>
-      <%= password_field :password_confirmation, class: "form-control" %>
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
 
       <%= f.submit "Update password", class: "btn btn-primary" %>
     <% end %>
